Fixed portrait on mobile issue for AboutMe.js

--- a/src/App.css
+++ b/src/App.css
@@ -569,7 +569,7 @@ body {
 }
 
 .portrait-container-inner {
-  width: 60%;
+  width: 90%;
   height: 100%;
 }
 
@@ -595,6 +595,13 @@ body {
   width: 80%;
 }
 
+@media only screen and (min-width: 768px) {
+  .portrait-container-inner {
+    width: 60%;
+    height: 100%;
+  }
+}
+
 @media only screen and (min-width: 770px) {
 
   .about-me {
@@ -605,6 +612,10 @@ body {
     width: 40%;
   }
 
+  .portrait-container-inner {
+    width: 60%;
+    height: 100%;
+  }
 }
 
 /* Footer */
